refactor: OCR Report 정보 조회 api 리팩토링