@@ -1,12 +1,17 @@
 package com.boindang.encyclopedia.application;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
+import com.boindang.encyclopedia.domain.IngredientDictionary;
 import com.boindang.encyclopedia.domain.ReportDocument;
+import com.boindang.encyclopedia.infrastructure.EncyclopediaRepository;
 import com.boindang.encyclopedia.infrastructure.ReportElasticsearchRepository;
 import com.boindang.encyclopedia.presentation.dto.response.IngredientReportResponse;
 import com.boindang.encyclopedia.presentation.dto.response.RiskIngredientSummary;
@@ -19,77 +24,104 @@ import lombok.RequiredArgsConstructor;
 public class ReportService {
 
 	private final ReportElasticsearchRepository reportRepository;
+	private final EncyclopediaRepository ingredientRepository;
 
 	public UserReportResponse getUserReport(List<String> ingredientNames, String userType) {
-		List<ReportDocument> documents = reportRepository.findByNameIn(ingredientNames);
+		// 1. ingredients, reports 조회
+		List<ReportDocument> reports = reportRepository.findByNameIn(ingredientNames);
+		List<IngredientDictionary> ingredients = ingredientRepository.findByNameIn(ingredientNames);
+
+		// 2. 이름으로 빠르게 찾기 위한 map 구성
+		Map<String, IngredientDictionary> ingredientMap = ingredients.stream()
+			.collect(Collectors.toMap(IngredientDictionary::getName, i -> i));
+
+		Map<String, ReportDocument> reportMap = reports.stream()
+			.collect(Collectors.toMap(ReportDocument::getName, r -> r));
 
 		List<IngredientReportResponse> ingredientResponses = new ArrayList<>();
-		List<RiskIngredientSummary> riskyIngredients = new ArrayList<>();
+		List<RiskIngredientData> riskyList = new ArrayList<>();
 
-		for (ReportDocument doc : documents) {
-			String risk = getRiskLevelByUserType(doc.getRiskLevel(), userType);
-			int score = getScoreByUserType(doc, userType);
-			List<String> userMessage = getMessageByUserType(doc, userType);
+		for (String name : ingredientNames) {
+			IngredientDictionary ingredient = ingredientMap.get(name);
+			ReportDocument report = reportMap.get(name);
+
+			String riskLevel = report != null
+				? getRiskLevelByUserType(
+				report.getRiskLevel(),
+				userType,
+				(ingredient != null && ingredient.getRiskLevel() != null)
+					? ingredient.getRiskLevel().getLabel()
+					: "정보 없음"
+			)
+				: (ingredient != null && ingredient.getRiskLevel() != null)
+				? ingredient.getRiskLevel().getLabel()
+				: "정보 없음";
+
+			int score = report != null ? getScoreByUserType(report, userType) : 0;
+			List<String> userMessage = report != null ? getMessageByUserType(report, userType) : List.of("정보 없음", "해당 성분에 대한 설명이 없습니다.");
 
 			ingredientResponses.add(IngredientReportResponse.builder()
-				.name(doc.getName())
-				.gi(doc.getGi())
-				.shortMessage(doc.getShortMessage())
-				.description(doc.getDescription())
-				.riskLevel(risk)
-				.build()
-			);
+				.name(name)
+				.gi(ingredient != null ? ingredient.getGi() : 0)
+				.shortMessage(report != null ? report.getShortMessage() : "설명이 없습니다.")
+				.keyword(report != null ? report.getKeyword() : "정보 없음")
+				.description(Collections.singletonList(ingredient != null ? ingredient.getDescription() : "설명이 없습니다."))
+				.riskLevel(riskLevel)
+				.build());
 
-			if ("주의".equals(risk) || "높음".equals(risk)) {
-				riskyIngredients.add(RiskIngredientSummary.builder()
-					.title(userMessage.get(0))
-					.message(userMessage.get(1))
-					.build()
-				);
+
+			if ("주의".equals(riskLevel) || "높음".equals(riskLevel)) {
+				riskyList.add(new RiskIngredientData(score, userMessage));
 			}
 		}
 
-		// 위험 성분 점수순 정렬
-		riskyIngredients = documents.stream()
+		// 3. 위험 성분 정렬 및 Top 3 추출
+		List<RiskIngredientSummary> topRisks = reports.stream()
 			.filter(doc -> {
-				String risk = getRiskLevelByUserType(doc.getRiskLevel(), userType);
+				IngredientDictionary ingredient = ingredientMap.get(doc.getName());
+				String fallbackRisk = (ingredient != null && ingredient.getRiskLevel() != null)
+					? ingredient.getRiskLevel().getLabel()
+					: "정보 없음";
+
+				String risk = getRiskLevelByUserType(doc.getRiskLevel(), userType, fallbackRisk);
 				return "주의".equals(risk) || "높음".equals(risk);
 			})
-			.sorted((a, b) -> Integer.compare(
-				getScoreByUserType(b, userType),
-				getScoreByUserType(a, userType)
-			))
+			.sorted(Comparator.comparingInt(doc -> getScoreByUserType((ReportDocument)doc, userType)).reversed())  // ✅ 정렬 여기서
 			.map(doc -> {
 				List<String> msg = getMessageByUserType(doc, userType);
 				return RiskIngredientSummary.builder()
-					.title(msg.get(0))
-					.message(msg.get(1))
+					.name(doc.getName())
+					.keyword(msg.get(0))
+					.title(msg.get(1))
+					.detail(msg.get(2))
 					.build();
 			})
-			.collect(Collectors.toList());
+			.limit(3)
+			.toList();
+
 
 		return UserReportResponse.builder()
 			.ingredients(ingredientResponses)
-			.topRisks(riskyIngredients)
+			.topRisks(topRisks)
 			.build();
 	}
 
-	private String getRiskLevelByUserType(ReportDocument.RiskLevel riskLevel, String userType) {
+	private String getRiskLevelByUserType(ReportDocument.RiskLevel reportRisk, String userType, String ingredientRiskLevel) {
 		return switch (userType.toLowerCase()) {
-			case "diabetic" -> riskLevel.getDiabetic();
-			case "kidneyPatient" -> riskLevel.getKidneyPatient();
-			case "dieter" -> riskLevel.getDieter();
-			case "muscleBuilder" -> riskLevel.getMuscleBuilder();
-			default -> riskLevel.getDefaultLevel();
+			case "diabetic" -> reportRisk.getDiabetic();
+			case "kidneypatient" -> reportRisk.getKidneyPatient();
+			case "dieter" -> reportRisk.getDieter();
+			case "musclebuilder" -> reportRisk.getMuscleBuilder();
+			default -> ingredientRiskLevel != null ? ingredientRiskLevel : "정보 없음";
 		};
 	}
 
 	private int getScoreByUserType(ReportDocument doc, String userType) {
 		return switch (userType.toLowerCase()) {
 			case "diabetic" -> doc.getDiabeticScore();
-			case "kidneyPatient" -> doc.getKidneyPatientScore();
+			case "kidneypatient" -> doc.getKidneyPatientScore();
 			case "dieter" -> doc.getDieterScore();
-			case "muscleBuilder" -> doc.getMuscleBuilderScore();
+			case "musclebuilder" -> doc.getMuscleBuilderScore();
 			default -> 0;
 		};
 	}
@@ -97,11 +129,12 @@ public class ReportService {
 	private List<String> getMessageByUserType(ReportDocument doc, String userType) {
 		return switch (userType.toLowerCase()) {
 			case "diabetic" -> doc.getDiabetic();
-			case "kidneyPatient" -> doc.getKidneyPatient();
+			case "kidneypatient" -> doc.getKidneyPatient();
 			case "dieter" -> doc.getDieter();
-			case "muscleBuilder" -> doc.getMuscleBuilder();
-			default -> List.of("정보 없음", "해당 유저 타입에 대한 설명이 없습니다.");
+			case "musclebuilder" -> doc.getMuscleBuilder();
+			default -> List.of("정보 없음", "유저타입 정보가 없습니다.");
 		};
 	}
-}
 
+	private record RiskIngredientData(int score, List<String> message) {}
+}
